# code-agnostic

./: .gitignore  .pre-commit-config.yaml  COMPILER_REQUIREMENTS.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  deploy-website.yml  publish-docker.yml  publish_to_pypi.yml
code_agnostic/: __main__.py  constants.py  executor.py  git_exclude_service.py  lossiness.py  mcp_service.py  models.py  planner.py  status.py  utils.py  validation.py  workspaces.py
code_agnostic/agents/: codex.py  compilers.py  models.py  opencode.py  parser.py
code_agnostic/apps/: __init__.py  app_id.py  apps_service.py  service.py
code_agnostic/cli/: __init__.py  aliases.py  helpers.py  options.py
code_agnostic/core/: repository.py  workspace_repository.py
code_agnostic/imports/: adapters.py  filesystem.py  models.py  service.py
code_agnostic/mappers/: __init__.py  base.py  opencode.py
code_agnostic/repositories/: __init__.py  common.py  cursor.py  opencode.py
code_agnostic/rules/: compilers.py  models.py  parser.py  repository.py
code_agnostic/skills/: compilers.py  models.py  parser.py
code_agnostic/spec/: __init__.py  loaders.py
code_agnostic/tui/: __init__.py  enums.py  import_selector.py  (+3 more)
llm_sync/: __main__.py  apps.py  cli.py  errors.py  executor.py  models.py  output.py  planner.py  status.py  utils.py  workspaces.py
tests/: conftest.py  test_cli_agents.py  test_cli_aliases.py  test_cli_apply_apps.py  test_cli_apply_codex.py  test_cli_apply_cursor.py  test_cli_apply_target.py  test_cli_apps.py  test_cli_explain_lossiness.py  test_cli_flags.py  test_cli_git_exclude.py  test_cli_import.py  test_cli_import_interactive.py  test_cli_mcp.py  test_cli_module_organization.py  test_cli_plan.py  test_cli_restore.py  test_cli_rules.py  test_cli_skills.py  test_cli_status.py  test_cli_validate.py  test_cli_workspace_resolution.py  test_cli_workspaces.py  test_common_mcp_to_dto.py  test_common_repository.py  test_compiled_planning.py  test_dto_to_common_mcp.py  test_edge_cases.py  test_git_exclude_service.py  test_mapper_opencode.py  test_mcp_service.py  test_planner_executor.py  test_planner_rules.py  test_symlink_planning.py  test_sync_plan_model.py  test_transactional_executor.py  test_utils.py  test_workspace_config_sync.py  test_workspace_repo_status.py  test_workspaces.py
website/: package.json  svelte.config.js
(+130 files in other folders)
