[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-agnostic"
version = "0.1.0"
description = "Centralized hub for LLM coding config: MCP, skills, rules, and agents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click",
  "rich"
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0",
  "pytest>=8.0",
  "jsonschema>=4.0",
  "ruff>=0.8.0",
  "mypy>=1.11"
]

[project.scripts]
code-agnostic = "code_agnostic.__main__:main"

[tool.setuptools.packages.find]
include = ["code_agnostic*"]
